sintaxis.output
Grammar

    0 $accept: entrada $end

    1 $@1: ε

    2 entrada: $@1 lista

    3 lista: lista asignacion
    4      | asignacion
    5      | error ";"

    6 asignacion: "register" "=" expresion ";"

    7 expresion: expresion "+" expresion
    8          | expresion "-" expresion
    9          | expresion "*" expresion
   10          | expresion "/" expresion
   11          | "number"
   12          | "register"
   13          | "(" expresion ")"
   14          | "-" expresion


Terminals, with rules where they appear

    $end (0) 0
    error (256) 5
    "+" (258) 7
    "-" (259) 8 14
    "*" (260) 9
    "/" (261) 10
    "number" <entero> (262) 11
    "(" (263) 13
    ")" (264) 13
    ";" (265) 5 6
    "register" <cadena> (266) 6 12
    "=" (267) 6


Nonterminals, with rules where they appear

    $accept (13)
        on left: 0
    entrada (14)
        on left: 2
        on right: 0
    $@1 (15)
        on left: 1
        on right: 2
    lista (16)
        on left: 3 4 5
        on right: 2 3
    asignacion (17)
        on left: 6
        on right: 3 4
    expresion <entero> (18)
        on left: 7 8 9 10 11 12 13 14
        on right: 6 7 8 9 10 13 14


State 0

    0 $accept: • entrada $end

    $default  reduce using rule 1 ($@1)

    entrada  go to state 1
    $@1      go to state 2


State 1

    0 $accept: entrada • $end

    $end  shift, and go to state 3


State 2

    2 entrada: $@1 • lista

    error       shift, and go to state 4
    "register"  shift, and go to state 5

    lista       go to state 6
    asignacion  go to state 7


State 3

    0 $accept: entrada $end •

    $default  accept


State 4

    5 lista: error • ";"

    ";"  shift, and go to state 8


State 5

    6 asignacion: "register" • "=" expresion ";"

    "="  shift, and go to state 9


State 6

    2 entrada: $@1 lista •
    3 lista: lista • asignacion

    "register"  shift, and go to state 5

    $default  reduce using rule 2 (entrada)

    asignacion  go to state 10


State 7

    4 lista: asignacion •

    $default  reduce using rule 4 (lista)


State 8

    5 lista: error ";" •

    $default  reduce using rule 5 (lista)


State 9

    6 asignacion: "register" "=" • expresion ";"

    "-"         shift, and go to state 11
    "number"    shift, and go to state 12
    "("         shift, and go to state 13
    "register"  shift, and go to state 14

    expresion  go to state 15


State 10

    3 lista: lista asignacion •

    $default  reduce using rule 3 (lista)


State 11

   14 expresion: "-" • expresion

    "-"         shift, and go to state 11
    "number"    shift, and go to state 12
    "("         shift, and go to state 13
    "register"  shift, and go to state 14

    expresion  go to state 16


State 12

   11 expresion: "number" •

    $default  reduce using rule 11 (expresion)


State 13

   13 expresion: "(" • expresion ")"

    "-"         shift, and go to state 11
    "number"    shift, and go to state 12
    "("         shift, and go to state 13
    "register"  shift, and go to state 14

    expresion  go to state 17


State 14

   12 expresion: "register" •

    $default  reduce using rule 12 (expresion)


State 15

    6 asignacion: "register" "=" expresion • ";"
    7 expresion: expresion • "+" expresion
    8          | expresion • "-" expresion
    9          | expresion • "*" expresion
   10          | expresion • "/" expresion

    "+"  shift, and go to state 18
    "-"  shift, and go to state 19
    "*"  shift, and go to state 20
    "/"  shift, and go to state 21
    ";"  shift, and go to state 22


State 16

    7 expresion: expresion • "+" expresion
    8          | expresion • "-" expresion
    9          | expresion • "*" expresion
   10          | expresion • "/" expresion
   14          | "-" expresion •

    "*"  shift, and go to state 20
    "/"  shift, and go to state 21

    $default  reduce using rule 14 (expresion)


State 17

    7 expresion: expresion • "+" expresion
    8          | expresion • "-" expresion
    9          | expresion • "*" expresion
   10          | expresion • "/" expresion
   13          | "(" expresion • ")"

    "+"  shift, and go to state 18
    "-"  shift, and go to state 19
    "*"  shift, and go to state 20
    "/"  shift, and go to state 21
    ")"  shift, and go to state 23


State 18

    7 expresion: expresion "+" • expresion

    "-"         shift, and go to state 11
    "number"    shift, and go to state 12
    "("         shift, and go to state 13
    "register"  shift, and go to state 14

    expresion  go to state 24


State 19

    8 expresion: expresion "-" • expresion

    "-"         shift, and go to state 11
    "number"    shift, and go to state 12
    "("         shift, and go to state 13
    "register"  shift, and go to state 14

    expresion  go to state 25


State 20

    9 expresion: expresion "*" • expresion

    "-"         shift, and go to state 11
    "number"    shift, and go to state 12
    "("         shift, and go to state 13
    "register"  shift, and go to state 14

    expresion  go to state 26


State 21

   10 expresion: expresion "/" • expresion

    "-"         shift, and go to state 11
    "number"    shift, and go to state 12
    "("         shift, and go to state 13
    "register"  shift, and go to state 14

    expresion  go to state 27


State 22

    6 asignacion: "register" "=" expresion ";" •

    $default  reduce using rule 6 (asignacion)


State 23

   13 expresion: "(" expresion ")" •

    $default  reduce using rule 13 (expresion)


State 24

    7 expresion: expresion • "+" expresion
    7          | expresion "+" expresion •
    8          | expresion • "-" expresion
    9          | expresion • "*" expresion
   10          | expresion • "/" expresion

    "*"  shift, and go to state 20
    "/"  shift, and go to state 21

    $default  reduce using rule 7 (expresion)


State 25

    7 expresion: expresion • "+" expresion
    8          | expresion • "-" expresion
    8          | expresion "-" expresion •
    9          | expresion • "*" expresion
   10          | expresion • "/" expresion

    "*"  shift, and go to state 20
    "/"  shift, and go to state 21

    $default  reduce using rule 8 (expresion)


State 26

    7 expresion: expresion • "+" expresion
    8          | expresion • "-" expresion
    9          | expresion • "*" expresion
    9          | expresion "*" expresion •
   10          | expresion • "/" expresion

    $default  reduce using rule 9 (expresion)


State 27

    7 expresion: expresion • "+" expresion
    8          | expresion • "-" expresion
    9          | expresion • "*" expresion
   10          | expresion • "/" expresion
   10          | expresion "/" expresion •

    $default  reduce using rule 10 (expresion)
